checking updates for playlist
